# CISC360-Nbody

./: .gitignore  README.md  rlversion.c
benchmarking/: 100kbench.sh  benchmark.sh  benchmark_results.txt  benchmark_results100k.txt
cuda/: CMakeLists.txt  Makefile  compile_commands.json  main.c  main.cpp  main.cu
cuda/.cache/clangd/index/: bodies.cpp.3B4476EBAD42D5EB.idx  bodies.h.92A164E8267B1FE0.idx  constants.h.C5358163F550426C.idx  drawing.cpp.38F27886F4E9873A.idx  drawing.h.98C466406662F8AB.idx  kernels.cu.82C6A73D6C4EBF4B.idx  kernels.cu.C0E76A7EF90BCCFF.idx  kernels.cuh.E36BE22EC10C04E0.idx  main.cpp.3B6A6679F18731DF.idx  main.cu.0DB896493C9DE16A.idx  maths.cpp.8C205DDA72FFBEDD.idx  maths.cu.FA8E9AF3CA6C9A32.idx  maths.cuh.F7A132CF606D833B.idx  maths.h.7B820DEFA4578F30.idx  physics.cpp.F9742B13D20C9746.idx  physics.cu.3B03D0B9934CEC66.idx  physics.cuh.DEE742176D40A911.idx  physics.h.35AAA69627DFC27D.idx
cuda/include/: bodies.h  constants.h  drawing.h  kernels.cuh  maths.cuh  physics.cuh  physics.h
cuda/kernels/: kernels.cu  kernels.cuh
cuda/src/: bodies.cpp  drawing.cpp  kernels.cu  maths.cu  physics.c  physics.cpp  physics.cu
graphs/: bar.py  disclaim.txt  log.py
pthreads/: Makefile  main.c  serial-impl  thread-impl
pthreads/include/: constants.h  physics.h
pthreads/src/: bodies.c  drawing.c  physics.c
serial/: Makefile  main.c
serial/include/: bodies.h  constants.h  drawing.h  maths.h  physics.h
serial/src/: bodies.c  drawing.c  physics.c
